# mandy

./: .clang-format  .gitignore  .travis.yml  Gtkui.cc  Gtkui.h  GtkuiControls.cc  GtkuiDrawing.cc  GtkuiKeyboard.cc  GtkuiMandyDrawingArea.cc  GtkuiMandyDrawingArea.h  GtkuiMandyWindow.cc  GtkuiMandyWindow.h  GtkuiPointer.cc  IterBuffer.h  Job.cc  Job.h  Makefile  Makefile.am  MandelbrotJob.cc  MandelbrotJob.h  README  README.md  TODO  autogen.sh  background.c  background.cc  colors.c  colors.cc  configure.ac  fatal.c  location.c  location.cc  mand.c  mand.h  mandy.cc  mandy.h  mandy.sln  movement.c
debian/: changelog  control  copyright  postinst.mandy  postrm.mandy  rules  usr.share.menu.mandy
gtkmm/: Controls.cc  Controls.h  DrawingArea.cc  GenericWindow.cc  GtkuiMandyDrawingArea.h  JuliaView.h  JuliaWindow.cc  JuliaWindow.h  MainMenu.cc  MainMenu.h  Makefile.am  MandelbrotView.cc  MandelbrotView.h  MandelbrotWindow.cc  MandelbrotWindow.h  Menu.cc  Toplevel.cc  View.cc  View.h  mmui.cc  mmui.h
gtkui/: ControlPanel.cc  ControlPanel.h  Controls.cc  Controls.h  GenericWindow.cc  GenericWindow.h  Gtkui.cc  GtkuiControls.cc  GtkuiDrawing.cc  JuliaView.h  JuliaWindow.cc  JuliaWindow.h  MainMenu.cc  MainMenu.h  Makefile.am  MandelbrotView.cc  MandelbrotView.h  MandelbrotWindow.cc  MandelbrotWindow.h  Movie.cc  Movie.h  View.cc  View.h  logo.h  mandy.1  mandy.cc  mklogobin.cc  mklogoc.cc  mmui.cc  mmui.h
images/: Makefile.am  julia16.xpm  julia32.xpm  minimand16.xpm  minimand32.xpm  wholemand16.xpm  wholemand32.xpm
lib/: Color.h  Draw.cc  Draw.h  Fixed-amd64.S  Fixed-str2.c  Fixed-test.py  Fixed.c  Fixed.h  Fixed128-amd64.S  Fixed128-str2.c  Fixed128-win64.asm  Fixed128.c  Fixed128.h  Fixed128CC.cc  Fixed256-aarch64.S  Fixed256-aarch64.py  Fixed256-amd64.S  Fixed256-amd64.py  Fixed256-str2.c  Fixed256-test.py  Fixed256.c  Fixed256.h  Fixed256CC.cc  Fixed64-amd64.S  Fixed64-win64.asm  Fixed64.c  Fixed64.h  Fixed64CC.cc  FixedCC.cc  FractalJob.cc  FractalJob.h  IterBuffer.cc  IterBuffer.h  Job.cc  Job.h  JuliaJob.cc  JuliaJob.h  MATHS.md  Makefile.am  MandelbrotJob.cc  (+37 more)
lib/fixedtest/: fixedtest.vcproj
projects/fixed64test/: fixed64test.vcproj
projects/fixedtest/: fixedtest.vcproj
projects/mandy/: mandy.vcproj
web/: Makefile.am  mandy.css  mandy.html  mandy.js  mfcgi.cc  mfcgi.h  process.cc
windows/fixed128-test/: fixed128-test.vcxproj
windows/fixed64-test/: fixed64-test.vcxproj
windows/libmandy/: dllmain.cpp  libmandy.vcxproj
windows/mandycs/: Fixed128.cs  JobQueue.cs  mandycs.csproj
windows/mandycs/Properties/: AssemblyInfo.cs
windows/speedtest/: speedtest.vcxproj
windows/tests/: Fixed128Test.cs  IterationTest.cs  JobQueueTest.cs  tests.csproj
windows/tests/Properties/: AssemblyInfo.cs
